[package]
name = "prefixtree"
version = "0.1.3"
authors = ["Vee Satayamas <vsatayamas@gmail.com>"]
description = "Hash-table-based prefix tree library"
homepage = "https://github.com/veer66/prefixtree"
repository = "https://github.com/veer66/prefixtree.git"
readme = "README.md"
keywords = ["text", "library"]
license = "MIT"

[lib]

[dependencies]
